--- a/pagar.html
+++ b/pagar.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-16" data-rv-view="126" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-16" data-rv-view="126" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">Valor: $ 250.000 libres</h3>
+                        <h3 class="mbr-header__text">Valor: $ 260.500</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 124px;">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">Valor: $ 250.000 libres</h3>
+                        <h3 class="mbr-header__text">Valor: $ 260.000</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 124px;">
