--- a/cursos.html
+++ b/cursos.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header2-u" data-rv-view="74" style="background-image: url(assets/images/a3e-1920x1790.jpg);">
+<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header2-u" data-rv-view="74" style="background-image: url(assets/images/a3g-1-1920x1790.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -99,9 +99,9 @@
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text"><br><br>ANIMATE!</h1>
-                        <p class="mbr-hero__subtext"><br><br>Este curso presencial está pensado para todos aquellos artistas que quieren comenzar o ya tienen fundamentos de manera profesional en el arte de la animación 3d, trabajaremos con Autodesk Maya el software número 1 y líder en animación 3d en producciones de cine y videojuegos. 
+                        <p class="mbr-hero__subtext"><br>Este curso presencial está pensado para todos aquellos artistas que quieren comenzar o ya tienen fundamentos de manera profesional en el arte de la animación 3d, trabajaremos con Autodesk Maya el software número 1 y líder en animación 3d en producciones de cine y videojuegos. 
 <br>
-<br>Comenzaremos desde 0 y lo primordial será que en este primer nivel abordaremos conceptos y principios fundamentales de la animación que serán pilares principales en cualquier tipo de desarrollo para la animación.
+<br>Comenzaremos desde 0 y lo primordial será que en este primer nivel abordemos conceptos y principios fundamentales de la animación que serán pilares principales en cualquier tipo de desarrollo para la producción en la indsutria audiovisual.
 <br>
 <br>Aprenderás a animar personajes pero más allá podrás aplicar esto a cualquier software o desempeño gráfico, tendrás una sesión presencial por jornada son en total 4 y 4 mas de feedback en línea (no obligatorios) todas las sesiones presencial o en línea serán grabadas para que puedan acceder en cualquier momento, recibirán libros digitales y material extra para su aprendizaje, trabajaremos con scripts y herramientas que nos facilitaran el trabajo, y muchas mas agregados para que su aprendizaje se dé la mejor calidad.&nbsp;<br></p>
                     </div>
@@ -344,7 +344,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="GtG0FuTF6T4803JDRrDcNkunqg7ynENUT+fgl/vlsd3hPpu4GTFLk5eU2LASxNWeedUAm1fK+jyrNFZ4Jed3b2h7E6XEpympqZTdB2pFl3kgFb3Lce4Wrjn9gWGpBFJf" data-form-email="true">
+                            <input type="hidden" value="pxGESbkxjmMYqtrySt4/lcsAD9SCzNSTUSaJjK+LkNkSc/8t93ssCtQnAwX32/CxhdY/QZ6EFWOJ80dZE7AWGsD1BSUVZdBuPKRhOqiBxe717HBLIFqns4LarF9Gnn5g" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
