--- a/cursos.html
+++ b/cursos.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -228,7 +228,7 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 31px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>► Lugar: EL NIDO &nbsp;Cra. 24 #20-10 Pasto/Nariño &nbsp;disponibilidad de 5 horas seguidas los dias sabados&nbsp;</p><p>► Para la Instalacion de software a trabajar despues de realizar el pago y enviar la informacion necesaria para su inscripción, recibiran un link a su correo y una guia de su correspondiente proceso de instalación o tambien de manera presencial lo podremos realizar el dia 10 de agosto de 9 a 12.</p><p>► Se entregara material adicional, libros y scripts para el desarrollo de los ejercicios.</p><p>► FEEDBACK: retro alimentacion y correcion en linea programada - NO ES OBLIGATORIO SU ASISTENCIA<br></p><p>► Todas las sesiones Presenciales y los feedback seran grabados y subidos en linea para su acceso</p><p>► Impartido por Wilmer Zambrano Guerrero Certificado Profesionalmente en Autodesk Maya y Adobe&nbsp;</p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>► Lugar: EL NIDO &nbsp;Cra. 24 #20-10 Pasto/Nariño &nbsp;disponibilidad de 5 horas seguidas los dias sabados.&nbsp;</p><p>► Instalación de software despues de realizar el pago y enviar la informacion necesaria para su inscripción, recibiran un link a su correo y una guia de su correspondiente proceso de instalación o tambien de manera presencial lo podremos realizar el dia 10 de agosto de 9 a 12.</p><p>► Se entregara material adicional por sesion, libros y scripts para el desarrollo de los ejercicios.</p><p>► FEEDBACK: retro alimentacion y correcion en linea programada - NO ES OBLIGATORIO SU ASISTENCIA.<br></p><p>► Todas las sesiones Presenciales y los feedback seran grabados y subidos en linea para su acceso.</p><p>► Impartido por Wilmer Zambrano Guerrero Certificado Profesionalmente en Autodesk Maya y Adobe.&nbsp;</p></div>
         </div>
     </div>
     
@@ -342,7 +342,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="PREGUNTAS Y DUDAS?">
-                            <input type="hidden" value="0fyvDjnHcheHrcGpiC4TH0zhSHxuNg/HKjLpJ2EOP/8OGlUx0J2ueV0G23NpAp8ukSK07jgszAD/ljKaktC6K1EXxPgMlXQramAE/3PB7GxHx7B+qCMXz5vFDiWuUx55" data-form-email="true">
+                            <input type="hidden" value="312q3ih7Fvo/AW2rkRBwvdgq2WF5Vhw5eS1aQj6WPRPXIFHFeH7xt3VAXXfcqhm4VPjArg0ZT/M3uBvN61UMlJzbuk875pKTnRDiaroE064cKcibbhjGl5wXdYFpGu1O" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
