--- a/cursos.html
+++ b/cursos.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -342,7 +342,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="PREGUNTAS Y DUDAS?">
-                            <input type="hidden" value="312q3ih7Fvo/AW2rkRBwvdgq2WF5Vhw5eS1aQj6WPRPXIFHFeH7xt3VAXXfcqhm4VPjArg0ZT/M3uBvN61UMlJzbuk875pKTnRDiaroE064cKcibbhjGl5wXdYFpGu1O" data-form-email="true">
+                            <input type="hidden" value="nD0xIJL90GbC/eapHdbVsH4ROUU/RcEgm4X/CxFwoweh9K7xO+RGhTq+Su++uCaJzdrqgwzbQYCmls/4/RdAU5ivAckauyQDaJDIjDOIW5C1S5B22idI12km5B2OA937" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
